# Cranium

./: Cranium.cabal  LICENSE
app/: Main.hs
src/: Interpreter.hs  Lib.hs  Types.hs
