name:                Cranium
version:             0.1.0.0
synopsis:            A BrainF**k Interpreter
description:         Simulates a Turing machine.
homepage:            https://github.com/thenaesh/Cranium#readme
license:             BSD3
license-file:        LICENSE
author:              Thenaesh Elango
maintainer:          thenaeshelango@gmail.com
copyright:           2017 Thenaesh Elango
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Interpreter
                     , Instruction
  build-depends:       base >= 4.7 && < 5
                     , array
  default-language:    Haskell2010

executable Cranium-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Cranium
  default-language:    Haskell2010

test-suite Cranium-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Cranium
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/thenaesh/Cranium
